--- a/debian/consul.service
+++ b/debian/consul.service
@@ -3,8 +3,9 @@ Description=Consul agent
 
 [Service]
 Type=simple
-Environment=GOMAXPROCS=2
-EnvironmentFile=/etc/default/consul
+EnvironmentFile=-/etc/default/consul
+User=consul
+Group=consul
 ExecStart=/usr/bin/consul agent -config-dir=/etc/consul.d $CONSUL_FLAGS
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
